rollback to G1 GC + try to release nodes immediately after handling