@@ -157,7 +157,7 @@
                         <includes>
                             <include>**/*Spec.class</include>
                         </includes>
-                        <argLine>-server -Xms4g -Xmx4g -XX:NewSize=3g -Xss228k -XX:PermSize=64m -XX:MaxPermSize=64m -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                        <argLine>-server -Xms4g -Xmx4g -XX:NewSize=3g -Xss228k -XX:PermSize=64m -XX:MaxPermSize=64m -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -179,7 +179,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
-                                <argLine>-server -Xms2560m -Xmx2560m -XX:NewSize=2240m -Xss228k -XX:PermSize=32m -XX:MaxPermSize=32m -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                                <argLine>-server -Xms2560m -Xmx2560m -XX:NewSize=2240m -Xss228k -XX:PermSize=32m -XX:MaxPermSize=32m -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
                                 <useFile>false</useFile>
                             </configuration>
                         </plugin>
